购物车（未完）

--- a/src/common/less/resetFun.less
+++ b/src/common/less/resetFun.less
@@ -16,6 +16,7 @@
   }
 }
 .border-none(){
-  border: none;
+  border: none !important;
+  &:after{ border: none}
 }
 .dislb(){ display: inline-block}
